--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -68,7 +68,7 @@ jobs:
                 continue
             fi
             
-            # 获取镜像的完整名称，例如kasmweb/nginx:1.25.3（命名空间/镜像名:版本号）
+            # 获取镜像的完整名称（命名空间/镜像名:版本号）
             image=$(echo "$line" | awk '{print $NF}')
             # 将@sha256:等字符删除
             image="${image%%@*}"
